objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Comments_Start__c</fullName>
        <description>For an Activity, show the start of the Comment field of Task, or Description field of Event.</description>
        <label>Comments Start</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <inlineHelpText>Date when Status last changed to &quot;Completed&quot;</inlineHelpText>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotifyAccountOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyAccountOwner</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>